--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
       <header id="todo-title">
         <h1>To-Do List</h1>
         <!-- TODO: Buatlah sebuah subtitle dengan id todo-subtitle -->
+        <h2 id="todo-subtitle">~Today I need to~</h2>
       </header>
       <main>
         <!-- Section: input -->
         <section>
           <!-- TODO: Buatlah sebuah input bertipe text dengan id todo-input -->
-          <label for="todo-input" class="form-label">~Today I need to~</label>
+          <label for="todo-input" class="form-label"></label>
           <input type="text" id="todo-input" placeholder="masukan kegiatan" />
           <!-- TODO: Buatlah sebuah button dengan id todo-submit -->
           <button id="todo-submit">Submit</button>
@@ -60,7 +61,7 @@
 
       // TODO: register event onclick / addEventListener untuk button
       // akan menjalankan fungsi fnClickHandler
-      // button.addEventListener("click", fnClickHandler);
+      button.addEventListener("click", fnClickHandler);
       input.addEventListener("keypress", fnClickHandler);
       // TODO: register event onkeypress / addEventListener untuk input
       // sehingga saat di input ditekan enter akan menjalankan fungsi fnClickHandler juga
