--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           let val = input.value;
           console.log(val);
           li.appendChild(document.createTextNode(val));
-          output.appendChild(li);
+          output.append(li);
           input.value = "";
         };
 
@@ -54,7 +54,7 @@
           let val = input.value;
           console.log(val);
           li.appendChild(document.createTextNode(val));
-          output.appendChild(li);
+          output.append(li);
           input.value = "";
         }
       }
