--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="app">
       <!-- TODO: Buatlah sebuah header dengan id todo-title -->
       <header id="todo-title">
-        <h1>To-Do List</h1>
+        <h1><span id="todo">To-Do</span> List</h1>
         <!-- TODO: Buatlah sebuah subtitle dengan id todo-subtitle -->
         <h2 id="todo-subtitle">~Today I need to~</h2>
       </header>
@@ -33,37 +33,32 @@
     <!-- ! Untuk tantangan ini, script jangan diubah ke external js yah ! -->
     <script>
       // TODO: Deklarasi variable sesuai dengan kebutuhan di sini
-      let button = document.getElementById("todo-submit");
       let input = document.getElementById("todo-input");
+      let button = document.getElementById("todo-submit");
       let output = document.getElementById("todo-output");
 
       // TODO: Buatlah sebuah fungsi dengan nama fnClickHandler
       // Fungsi yang digunakan untuk menambahkan tulisan
       // Jangan ubah cara deklarasi fungsinya, cukup isi saja
       function fnClickHandler(toDoItem) {
-        button.onclick = function (e) {
-          let val = input.value;
-          let li = document.createElement("li");
-          li.innerText = val;
-          output.appendChild(li);
-          input.value = "";
-        };
-
-        if (toDoItem.key === "Enter") {
-          let val = input.value;
-          let li = document.createElement("li");
-          li.innerText = val;
-          output.appendChild(li);
-          input.value = "";
-        }
+        let val = input.value;
+        let li = document.createElement("li");
+        li.innerText = val;
+        output.appendChild(li);
+        input.value = "";
       }
 
       // TODO: register event onclick / addEventListener untuk button
       // akan menjalankan fungsi fnClickHandler
       button.addEventListener("click", fnClickHandler);
-      input.addEventListener("keypress", fnClickHandler);
+
       // TODO: register event onkeypress / addEventListener untuk input
       // sehingga saat di input ditekan enter akan menjalankan fungsi fnClickHandler juga
+      input.addEventListener("keypress", (event) => {
+        if (event.key === "Enter" || event.keyCode == 13) {
+          fnClickHandler();
+        }
+      });
     </script>
   </body>
 </html>
